# Sotuv-and-Marketing

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_public_schema.py
apps/api/app/: main.py
apps/api/app/ai/: prompt_builder.py
apps/api/app/ai/prompts/: ai_chat.txt  assistant_guardrails.txt  auto_reply.txt  generate_30_day_plan.txt  generate_hashtags.txt  generate_reels_script.txt  improve_content.txt  post_generator.txt  system_guardrails.txt
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: ads.py  analytics.py  api_keys.py  audit.py  auth.py  billing.py  brand_assets.py  brands.py  content.py  content_plan.py  crm.py  departments.py  health.py  inbox.py  integrations.py  knowledge.py  marketplace.py  notifications.py  onboarding.py  posts.py  reports.py  roles.py  social.py  tasks.py  tenant.py  twofa.py  users.py
apps/api/app/core/: chunker.py  config.py  db.py  deps.py  encryption.py  knowledge_sections.py  permissions.py  pricing.py  security.py  tenancy.py
apps/api/app/middleware/: grace.py  tenant.py
apps/api/app/models/: __init__.py  ads.py  base.py  billing.py  crm.py  inbox.py  knowledge.py  marketplace.py  reports.py  smm.py  tenant.py  tenant_scoped.py  user.py
apps/api/app/schemas/: ads.py  analytics.py  auth.py  billing.py  brand_asset.py  content.py  content_plan.py  crm.py  inbox.py  knowledge.py  marketplace.py  post.py  reports.py  smm.py  social.py  tasks.py  tenant.py
apps/api/app/services/: __init__.py  ads_service.py  ai_service.py  analytics_service.py  api_key_service.py  audit_service.py  auth_service.py  auto_reply_service.py  billing_service.py  brand_asset_service.py  brand_service.py  contact_service.py  content_plan_service.py  content_service.py  deal_service.py  email_service.py  embeddings_service.py  inbox_ingest.py  inbox_service.py  integration_service.py  invoice_pdf.py  knowledge_service.py  meta_service.py  notification_service.py  oauth_service.py  post_service.py  post_worker.py  publisher_service.py  reports_service.py  session_service.py  sms.py  social_account_service.py  sync_service.py  telegram_service.py  tenant_service.py  twofa_service.py  webhook_service.py  youtube_service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_ads.py  test_ai_content.py  test_analytics.py  test_auth.py  test_billing.py  test_brand_assets.py  test_content_plan.py  test_crm.py  test_deals.py  test_foundation_close.py  test_inbox.py  test_knowledge.py  test_marketplace.py  test_posts.py  test_reports.py  test_smm_brands.py  test_social_meta.py  test_social_telegram.py  test_social_youtube.py  test_sprint4.py  test_sync_events.py  test_tenant_bootstrap.py
apps/api/tests/unit/: test_chunker.py  test_grace.py  test_pricing.py  test_security.py  test_tenancy.py
apps/web/: .prettierrc.json  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: 00-overview.md  01-architecture.md  02-conventions.md  03-design-system.md  04-database-schema.md  05-api-contracts.md  06-ai-strategy.md  07-security.md  glossary.md  meta-app-review-checklist.md  smm-reviewer-environment.md
docs/adrs/: 0001-monorepo-structure.md  (+5 more)
infra/: Dockerfile.api  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml  nginx.conf
prompts/: debug.md  new-feature.md  review.md  starter.md
scripts/: check_smm_reviewer_readiness.py  seed_smm_reviewer_demo.py  setup.sh
(+108 files in other folders)
